force-app/main/default/objects/comsearch_results__c/comsearch_results__c.object-meta.xml
<CustomObject>
    <description>Used to track information from Comsearch (timed analysis, results sent in via picklist).</description>
    <label>Comsearch Link ID Record</label>
    <nameField>
        <label>Comsearch LinkID Result</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comsearch Link ID Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>