force-app/main/default/objects/comsearch_results__c/fields/Analysis_Status__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Status__c</fullName>
    <label>Analysis Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
                <label>Licensed (PM Review)</label>
            </value>
            <value>
                <fullName>Outreach in Progress</fullName>
            </value>
            <value>
                <fullName>Clearing/FCC Research</fullName>
            </value>
            <value>
                <fullName>License Cancelled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>