force-app/main/default/objects/comsearch_results__c/fields/Band__c.field-meta.xml
<CustomField>
    <fullName>Band__c</fullName>
    <label>Band</label>
    <length>255</length>
    <type>Text</type>
</CustomField>