force-app/main/default/objects/comsearch_results__c/fields/ComSearch_Broadcasters_Parent__c.field-meta.xml
<CustomField>
    <fullName>ComSearch_Broadcasters_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Creates relationship between CS Quarterly results and CS Broadcasters</inlineHelpText>
    <label>ComSearch Broadcasters Parent</label>
    <referenceTo>comsearch_broadcasters__c</referenceTo>
    <relationshipName>Comsearch_Quarterly_Results</relationshipName>
    <type>Lookup</type>
</CustomField>