force-app/main/default/objects/comsearch_results__c/fields/CS_Comment_2__c.field-meta.xml
<CustomField>
    <fullName>CS_Comment_2__c</fullName>
    <inlineHelpText>Hidden field, serves as a placeholder for cs notes</inlineHelpText>
    <label>CS Comment 2</label>
    <type>TextArea</type>
</CustomField>