force-app/main/default/objects/comsearch_results__c/fields/Date_of_Comsearch_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Comsearch_Analysis__c</fullName>
    <label>Date of Comsearch Analysis</label>
    <type>Date</type>
</CustomField>