force-app/main/default/objects/comsearch_results__c/fields/Date_PCN_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_PCN_Sent__c</fullName>
    <label>Date PCN Sent</label>
    <type>Date</type>
</CustomField>