force-app/main/default/objects/comsearch_results__c/fields/Date_Site_Audit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Site_Audit_Requested__c</fullName>
    <inlineHelpText>Populated when Site Audit box is checked (automated)</inlineHelpText>
    <label>Date Site Audit Requested</label>
    <type>Date</type>
</CustomField>