force-app/main/default/objects/comsearch_results__c/fields/Days_since_last_comment__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_comment__c</fullName>
    <formula>TODAY()- Days_since_last_Outreach_Comment__c</formula>
    <label>Days since last comment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>