force-app/main/default/objects/comsearch_results__c/fields/Days_since_last_Outreach_Comment__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_Outreach_Comment__c</fullName>
    <inlineHelpText>Hidden field, used to auto populate Last changed date (For phase transition comments)</inlineHelpText>
    <label>Days since last Outreach Comment</label>
    <type>Date</type>
</CustomField>