force-app/main/default/objects/comsearch_results__c/fields/Decommissioned_per_T_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Decommissioned_per_T_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decommissioned per T-Mobile</label>
    <type>Checkbox</type>
</CustomField>