force-app/main/default/objects/comsearch_results__c/fields/Enter_new_Outreach_Comment__c.field-meta.xml
<CustomField>
    <fullName>Enter_new_Outreach_Comment__c</fullName>
    <inlineHelpText>Adds time ,date and requester name, then clears field.</inlineHelpText>
    <label>Enter new Outreach Comment</label>
    <type>TextArea</type>
</CustomField>