force-app/main/default/objects/comsearch_results__c/fields/Enter_Notes_Here__c.field-meta.xml
<CustomField>
    <fullName>Enter_Notes_Here__c</fullName>
    <inlineHelpText>Enter Notes for linkID note field (different from Outreach- will not update outreach section).</inlineHelpText>
    <label>Enter Notes Here</label>
    <type>TextArea</type>
</CustomField>