force-app/main/default/objects/comsearch_results__c/fields/Freq__c.field-meta.xml
<CustomField>
    <fullName>Freq__c</fullName>
    <label>Freq</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>