force-app/main/default/objects/comsearch_results__c/fields/License_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Status__c</fullName>
    <label>License Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Licensed</fullName>
            </value>
            <value>
                <fullName>Pending Cancellation</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>