force-app/main/default/objects/comsearch_results__c/fields/Licensee__c.field-meta.xml
<CustomField>
    <fullName>Licensee__c</fullName>
    <label>Licensee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>