force-app/main/default/objects/comsearch_results__c/fields/Licensee_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to track the licensee info</inlineHelpText>
    <label>Licensee Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Comsearch_Quarterly_Results</relationshipName>
    <type>Lookup</type>
</CustomField>