force-app/main/default/objects/comsearch_results__c/fields/Link_ID__c.field-meta.xml
<CustomField>
    <fullName>Link_ID__c</fullName>
    <label>Link ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>