force-app/main/default/objects/comsearch_results__c/fields/Linked_Station__c.field-meta.xml
<CustomField>
    <fullName>Linked_Station__c</fullName>
    <label>Linked Station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>