force-app/main/default/objects/comsearch_results__c/fields/Linked_Station_License_Status__c.field-meta.xml
<CustomField>
    <fullName>Linked_Station_License_Status__c</fullName>
    <label>Linked Station License Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>