force-app/main/default/objects/comsearch_results__c/fields/Outreach_Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Request_Notes__c</fullName>
    <inlineHelpText>Notes from Outreach team</inlineHelpText>
    <label>Outreach Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>