force-app/main/default/objects/comsearch_results__c/fields/Outreach_Support_Requested__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Support_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box to indicate result has been sent over to Outreach team</inlineHelpText>
    <label>Outreach Support Requested</label>
    <type>Checkbox</type>
</CustomField>