force-app/main/default/objects/comsearch_results__c/fields/PCN_File_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>PCN_File_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCN File Uploaded</label>
    <type>Checkbox</type>
</CustomField>