force-app/main/default/objects/comsearch_results__c/fields/Prior_Coordination_Notice_PCN_Request__c.field-meta.xml
<CustomField>
    <fullName>Prior_Coordination_Notice_PCN_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Coordination Notice (PCN) Request</label>
    <type>Checkbox</type>
</CustomField>