force-app/main/default/objects/comsearch_results__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <inlineHelpText>Used for BRS Uploads</inlineHelpText>
    <label>Service</label>
    <length>32</length>
    <type>Text</type>
</CustomField>