force-app/main/default/objects/comsearch_results__c/fields/Site_Audit__c.field-meta.xml
<CustomField>
    <fullName>Site_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Audit</label>
    <type>Checkbox</type>
</CustomField>