force-app/main/default/objects/comsearch_results__c/fields/Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit__c</fullName>
    <label>Site Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>