force-app/main/default/objects/comsearch_results__c/fields/Sunset_Letter_Request__c.field-meta.xml
<CustomField>
    <fullName>Sunset_Letter_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sunset Letter Request</label>
    <type>Checkbox</type>
</CustomField>