force-app/main/default/objects/comsearch_results__c/fields/Sunset_Notice_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Sunset_Notice_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sunset Notice Uploaded</label>
    <type>Checkbox</type>
</CustomField>