force-app/main/default/objects/comsearch_results__c/fields/ULS_Link__c.field-meta.xml
<CustomField>
    <fullName>ULS_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://wireless2.fcc.gov/UlsApp/UlsSearch/searchLicense.jsp&quot;, &quot;ULS&quot;)</formula>
    <inlineHelpText>Link to the ULS website</inlineHelpText>
    <label>ULS Link</label>
    <type>Text</type>
</CustomField>