force-app/main/default/objects/comsearch_results__c/fields/ULS_Status__c.field-meta.xml
<CustomField>
    <fullName>ULS_Status__c</fullName>
    <label>ULS Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>